Found Original Author and Title Page Fix

--- a/ThesisConventions/title.tex
+++ b/ThesisConventions/title.tex
@@ -1,57 +1,51 @@
 \begin{titlepage}
-\newcommand{\brk}{\vspace*{0.18in}}
-
 \thispagestyle{empty}
-
-
 \begin{center}
+\vspace*{0.18in}
 
-\brk
-
-   {\large 
+   {\large
 	\textbf{
 	Insert Title Here
 	}
    }
 
-
-\brk
+\vspace*{0.18in}
 by
 
-\brk
+\vspace*{0.18in}
 FirstName LastName
 
-\brk
+\vspace*{0.18in}
 A Thesis
 
-\brk
+\vspace*{0.18in}
 Submitted to the Faculty
 
-\brk
+\vspace*{0.18in}
 of the
 
-\brk
+\vspace*{0.18in}
 WORCESTER POLYTECHNIC INSTITUTE
 
-\brk
+\vspace*{0.18in}
 In partial fulfillment of the requirements for the
 
-\brk
+\vspace*{0.18in}
 Degree of Master of Science
 
-\brk
+\vspace*{0.18in}
 in
 
-\brk
+\vspace*{0.18in}
 Field Of Study
 
-\brk
+\vspace*{0.18in}
 by
 
-\brk\brk
+\vspace*{0.18in}\vspace*{0.18in}
 \rule{3in}{1.2pt}
 
-\brk
+\vspace*{0.18in}
 Month Year
 \end{center}
 APPROVED:
@@ -64,7 +58,7 @@ Professor FirstName LastName, Major Thesis Advisor
 \vspace{0.25in}
 \rule{3in}{0.8pt}
 
-Professor FirstName LastName, Thesis Committee Member	
+Professor FirstName LastName, Thesis Committee Member
 
 \vspace{0.25in}
 \rule{3in}{0.8pt}
