--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
-% Template by: Nicholas Fajardo
-% Original Template by: 
+% Template by: Nicholas Fajardo (nafajardo@wpi.edu)
+% Original Template by: Andreas Koeller (koeller@wpi.edu)
 \documentclass[12pt]{report}
 
 % Basic Package Imports
